--- a/Final-Project-Grabner/Final-Project-Grabner/Final-Project-Grabner.vbproj
+++ b/Final-Project-Grabner/Final-Project-Grabner/Final-Project-Grabner.vbproj
@@ -107,6 +107,11 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Chore.vb" />
+    <Compile Include="FinalProjectDatabaseDataSet.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FinalProjectDatabaseDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Homework.vb" />
     <Compile Include="MainForm.vb">
       <SubType>Form</SubType>
@@ -132,19 +137,6 @@
     </Compile>
     <Compile Include="Project.vb" />
     <Compile Include="Task.vb" />
-    <Compile Include="TaskTable.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TaskTable.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="TaskTable.vb">
-      <DependentUpon>TaskTable.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="TaskTable1.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TaskTable.xsd</DependentUpon>
-    </Compile>
     <Compile Include="UpdateTask.Designer.vb">
       <DependentUpon>UpdateTask.vb</DependentUpon>
     </Compile>
@@ -157,8 +149,23 @@
     <Compile Include="ViewAll.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ViewTask.Designer.vb">
+      <DependentUpon>ViewTask.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ViewTask.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AddTask.resx">
+      <DependentUpon>AddTask.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddUser.resx">
+      <DependentUpon>AddUser.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Calendar.resx">
+      <DependentUpon>Calendar.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
     </EmbeddedResource>
@@ -171,8 +178,22 @@
     <EmbeddedResource Include="UpdateTask.resx">
       <DependentUpon>UpdateTask.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ViewTask.resx">
+      <DependentUpon>ViewTask.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="FinalProjectDatabaseDataSet.xsc">
+      <DependentUpon>FinalProjectDatabaseDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="FinalProjectDatabaseDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>FinalProjectDatabaseDataSet.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="FinalProjectDatabaseDataSet.xss">
+      <DependentUpon>FinalProjectDatabaseDataSet.xsd</DependentUpon>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -183,26 +204,6 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
-    <None Include="TaskTable.xsc">
-      <DependentUpon>TaskTable.xsd</DependentUpon>
-    </None>
-    <None Include="TaskTable.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <SubType>Designer</SubType>
-      <LastGenOutput>TaskTable1.Designer.vb</LastGenOutput>
-    </None>
-    <None Include="TaskTable.xss">
-      <DependentUpon>TaskTable.xsd</DependentUpon>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="TaskTable.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="TaskTable_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>TaskTable.mdf</DependentUpon>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
@@ -215,6 +216,15 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="FinalProjectDatabase.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FinalProjectDatabase_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>FinalProjectDatabase.mdf</DependentUpon>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
