Renamed a few things to fix some naming issues

--- a/Final-Project-Grabner/Final-Project-Grabner/Final-Project-Grabner.vbproj
+++ b/Final-Project-Grabner/Final-Project-Grabner/Final-Project-Grabner.vbproj
@@ -100,10 +100,10 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Appointment.vb" />
-    <Compile Include="Calendar.Designer.vb">
-      <DependentUpon>Calendar.vb</DependentUpon>
+    <Compile Include="TaskCalendar.Designer.vb">
+      <DependentUpon>TaskCalendar.vb</DependentUpon>
     </Compile>
-    <Compile Include="Calendar.vb">
+    <Compile Include="TaskCalendar.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Chore.vb" />
@@ -163,8 +163,8 @@
     <EmbeddedResource Include="AddUser.resx">
       <DependentUpon>AddUser.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Calendar.resx">
-      <DependentUpon>Calendar.vb</DependentUpon>
+    <EmbeddedResource Include="TaskCalendar.resx">
+      <DependentUpon>TaskCalendar.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
